--- a/final-project.Rmd
+++ b/final-project.Rmd
@@ -16,6 +16,9 @@ Before I get into this, I just want to communicate that I do not know the actual
 The purpose of this project is to observe the changes in regime type prevalence relative to the strength of certain regimes, using a temporal and geographic lens in order to better understand the effect that major regime changes can have on surrounding regions. In order to understand this, the study is going to look at a number of cases over the course of the 20th century, with the Soviet Union and single party regimes being an example. The analysis will be conducted over the course of multiple year ranges and geographic locations; it will consist of a number of cases and analyses. 
 
 The data comes from a study published on March 14th, 2018 by Carsten Anckar and Cecilia Fredriksson in the Journal of European Political Science. It classifies political regimes from 1800 to 2016, using classifications which include a country's democratic/non-democratic status, a country's regime type (presidentialist, parliamentarian, personalist rule, etc.) and whether a country's head of state is popularly elected. The data in question is updated over the course of years, meaning that countries' regimes change over time during the dataset; consequently, the observed slopes are likely to be quite gentle. 
+
+\newpage
+
 ```{r data, echo = FALSE}
 
 data <- readxl::read_xlsx("data/41304_2018_149_MOESM2_ESM (1).xlsx")
@@ -162,7 +165,9 @@ The below two graphs show two ways of interpreting the potential spread of singl
 
 The first graph depicts the distribution of single party regimes in the world over the course of the 20th century. The data begins in 1917, the year of the Russian Revolution. It is important to note that the prevalence of single party regimes does not change significantly following 1917, but rather following 1945. 
 
-The second graph depicts the distribution of single party regimes specifically in Europe over the 20th century. In this graph, there are two lines: a linear line and a quadratic line. The linear line's r-squared is 0.006696221, whereas the r-squared the quadratic line is 0.08567992, meaning the quadratic line better fits the data. The quadratic model reflects the rise and fall of the single party regime type over the course of the 20th century, as the USSR gained prevalence and fell over the course of 80 years. 
+The second graph depicts the distribution of single party regimes specifically in Europe over the 20th century. In this graph, there are two lines: a linear line and a quadratic line. The linear line's r-squared is 0.006696221, whereas the r-squared the quadratic line is 0.08567992, meaning the quadratic line better fits the data. The quadratic model reflects the rise and fall of the single party regime type over the course of the 20th century, as the USSR gained prevalence and fell over the course of 80 years.
+
+A simple view at these graphs and at their correlations will communicate that this comparison is not strong. The linear models for both graphs do not reflect the drastic changes in the population of single party regimes around the years 1950 and 1991, and even the quadratic model featured in the European graph only slightly reflects this. Consequently, while the years since 1917 has some predictive power on the prevalence of single party regimes both in the world and particularly in Europe, our analysis can be improved.
 
 ```{r ussrgeom, echo = FALSE}
 
