--- a/final-project.Rmd
+++ b/final-project.Rmd
@@ -84,7 +84,16 @@ data_ussr_alt <- data %>%
 
 lm_ussr_alt <- lm(singleparty ~ year_new, data = data_ussr_alt)
 
+lm_ussr_alt_sq <- lm(singleparty ~ year_new +
+                    I(year_new^2), data = data_ussr_alt)
+
 summary(lm_ussr_alt)$adj.r.squared
+
+summary(lm_ussr2_sq)$adj.r.squared
+
+lm_ussr_alt_sq_values <- data_ussr_alt %>% select(year_new, singleparty)
+lm_ussr_alt_sq_values$ussr_alt_sq_values <-
+  predict(lm_ussr_alt_sq, newdata = lm_ussr_alt_sq_values)
 
 # The alt was designed to better compare with ussr2
 
@@ -326,12 +335,28 @@ ussr2_geom
 
 ### Changing the Year: What Happens?
 
-  Given that this analysis is attempting to use the year since a certain event as a predictor of a certain regime type in order to determine to what extent a demonstration effect exists for regime change, 
+  Given that this analysis is attempting to use the year since a certain event as a predictor of a certain regime type in order to determine to what extent a demonstration effect exists for regime change, changing the year at which the analysis starts, i.e. what year the event occurs, would be a prudent decision. The below graphs do that, with certain graphs also expanding the geographic region beyond Europe to see if there is a greater correlation in Europe and Asia (the two continents which contained the USSR) than in Europe alone. 
+  
+  As a result of the method by which the lines of fit were calculated, additional changes were required in order to make them better reflect the column graph in the background. The first graph makes use of a 100x multiplier, while the subsequent graphs use a 30x multiplier; these multipliers were not set based on a rigorous statistical method and, as such, it should be understood that the lines do not correspond precisely to the column graphs behind them. To reiterate, the lines are there to communicate the trend in the data, but are not precise to the column graph itself. 
+  
+    The first graph shows the concentration of single party regimes worldwide from the year 1950 to the year 2000. The graph shows a steady increase from 1950 to 1960, stagnation through the mid-sixties to the mid-seventies, and then a jump following approximately 1975, peaking at around 1978. Following that, the concentration of single party regimes seems to decline, with it dropping dramatically in the early 1990s. The line of best fit for this set of data shows a steady decline beginning at a moderate height; the quadratic curve for this model begins at a lower amount, slightly rises to peak around 1962, and then gently curves down toward 2000, finishing slightly above the linear fit. The r-squared value for the linear fit is 0.03463, while the correlation for the quadratic fit is 0.04009, meaning that the quadratic fit is not particularly better at predicting this relationship than the linear fit. 
+    
+    The second graph features the data from Europe. It begins high at about 8 single party regimes in 1950, goes up to about 9 around 1953, and stays at that level until the late 1980s, in which it begins to fall dramatically. The fits for this set of data are much steeper than in the previous graph; the linear and quadratic fits begin relatively higher when compared to the previous graph, but also fall much faster; this reflects the swift pace at which single party regimes disappeared in Eurppe as the Soviet Union weakened. The r-squared for the linear fit is 0.1066, while the r-squared for the quadratic fit is 0.1094; these fits essentially hold the same predictive power over this period. These r-squared are notably higher than those worldwide, suggesting that the geographic connection may play an important role in the effectiveness of the demonstration effect. 
+    
+    The third graph includes the same years as the previous two graphs, but focuses on Europe and Asia, as opposed to the entire world or just Europe. The graph mixes the patterns of the previous two graphs, beginning at a moderate height, increasing somewhat in the mid-seventies, and falling off significantly in the late 1980s. The linear fit begins much higher than the quadratic fit and follows a much steeper trend downward; the two fits intersect in the late 1980s, immediately before the drop. The r-squared value of the linear fit is 0.04610 while the r-squared value of the quadratic fit is 0.04824; as such, neither fit is particularly stronger than other. 
+    
+    When comparing the first three graphs, it becomes clear that the model with the strongest predictive power is that featured in the second graph, which pertains but to Europe. As such, our analysis of single party regime types in the 20th century suggests a geographic component to the demonstration effect, wherein a country's proximity to the epicenter of a certain regime type, in this case single party regimes emerging out of the USSR, increases its likelihood toward adopting such a regime type. However, it is also clear that, based on the low r-squared values, more goes into whether a country selects a given regime type than the demonstration effect. At its most robust thus far, the demonstration effect, measured in years since 1950, has accounted for approximately 11% of the variation in single party regimes in Europe. Though this number is respectable, its smallness suggests that a number of other factors exist which play a role in changing regime type. 
+    
+    Moving onto the last three graphs which cover the years since 1975 in Europe, the years since 1987 in Europe, and the years in 1987 in Europe and Asia, there is some sign of stronger measure. The fourth graph follows a similar pattern to the second graph; however, its r-squared value is slightly higher than the second graph at 0.1286. Interestingly, this graph's steeper, downward trend suggests an potential unraveling of the demonstration effect, where the Soviet Union's failure to maintain its coercive control over the various European states result in the collapse of the single party system in Europe as a whole. 
+    
+  The fifth and sixth graphs are much less interesting than the previous four. The fifth graph consists of only three years, those after 1987, and shows the drop that occurred in the late 1980s from a much closer perspective. Due to the limited sample size afforded to the last graph, the line of best fit does not capture the pattern here particularly well, with an r-squared value of just 0.0615. The sixth graph does not fare much better, with an r-squared of 0.0156. The graph starts slightly higher than the fifth one and retains approximately 3 single party regimes following 1991, which would account for those regimes in Asia; the decreased predictive power of the model once again suggests the role of geography in the demonstration effect. 
 ```{r ussr2, echo = FALSE}
 
 ussralt_geom <- ggplot(data = data_ussr_alt, mapping = 
                       aes(x = year_new, y = singleparty)) +
   geom_col(aes(y = singleparty)) +
+  geom_line(aes(y = 100*lm_ussr_alt_sq_values$ussr_alt_sq_values),
+            color = "red") +
   geom_abline(intercept = .37460 * 100, slope = -0.00312 * 100) +
   ylim(0, 40) + 
   xlim(50, 100) + 
